--- a/src/app/landing-page/user-management/user-management.component.html
+++ b/src/app/landing-page/user-management/user-management.component.html
@@ -1,1 +1,146 @@
-<p>user-management works!</p>
+<h3>{{ "USER_MANAGEMENT" | translate }}</h3>
+<div style="border-top: 3px solid orangered; border-radius: 5px">
+  <div style="margin-bottom: 10px"></div>
+  <div>
+    <input
+      type="text"
+      class="form-control"
+      name="fullName"
+      [placeholder]="'FULL_NAME' | translate"
+      [(ngModel)]="fullName"
+      (keyup.enter)="search()"
+      style="
+        width: 200px;
+        border: 1px #000 solid;
+        display: inline;
+        margin-right: 5px;
+      "
+    />
+    <input
+      type="text"
+      class="form-control"
+      name="username"
+      [placeholder]="'USER_NAME' | translate"
+      [(ngModel)]="username"
+      style="
+        width: 200px;
+        border: 1px #000 solid;
+        display: inline;
+        margin-right: 5px;
+      "
+      (keyup.enter)="search()"
+    />
+    <input
+      type="text"
+      class="form-control"
+      name="email"
+      placeholder="Email"
+      [(ngModel)]="email"
+      (keyup.enter)="search()"
+      style="
+        width: 200px;
+        border: 1px #000 solid;
+        display: inline;
+        margin-right: 5px;
+      "
+    />
+    <input
+      type="text"
+      class="form-control"
+      name="phoneNumber"
+      [(ngModel)]="phoneNumber"
+      [placeholder]="'PHONE_NUMBER' | translate"
+      (keyup.enter)="search()"
+      style="
+        width: 200px;
+        border: 1px #000 solid;
+        display: inline;
+        margin-right: 5px;
+      "
+    />
+    <button class="btn btn-success" style="margin-top: -5px" (click)="search()">
+      Search
+    </button>
+
+    <button
+      type="button"
+      class="btn btn-primary"
+      data-bs-target="#myModal"
+      data-bs-toggle="modal"
+      style="position: fixed; right: 17px"
+    >
+      <i class="fa fa-plus" aria-hidden="true"></i>
+      <span style="margin-left: 15px">{{ "ADD_NEW" | translate }}</span>
+    </button>
+  </div>
+  <br />
+
+  <!-- TABLE -->
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col" style="width: 5%;">ID</th>
+        <th scope="col" style="width: 20%;">{{ "FULL_NAME" | translate }}</th>
+        <th scope="col" style="width: 15%;">{{ "USER_NAME" | translate }}</th>
+        <th scope="col" style="width: 20%;">Email</th>
+        <th scope="col" style="width: 15%;">{{ "PHONE_NUMBER" | translate }}</th>
+        <th scope="col" style="width: 10%;">{{ "ROLES" | translate }}</th>
+        <th scope="col" style="width: 10%;">{{ "STATUS" | translate }}</th>
+        <th scope="col" style="width: 10%;"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of users">
+        <td>{{ user.id }}</td>
+        <td>{{ user.fullName }}</td>
+        <td>{{ user.username }}</td>
+        <td>{{ user.email }}</td>
+        <td>{{ user.phoneNumber }}</td>
+        <td>{{ user.roles }}</td>
+        <td>{{ user.status }}</td>
+        <td>
+          <i class="fa-regular fa-pen-to-square fa-lg" style="margin-right: 5px"></i>
+          <i class="fa-solid fa-trash fa-lg"></i>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <!-- PAGING -->
+  <nav>
+    <ul class="pagination">
+      <span style="margin: 4px 10px;">Trang {{currentPageNumber}}/{{totalPages.length}} ({{totalElements}} kết quả)</span>
+      <!-- PREVIOUR -->
+      <li class="page-item">
+        <a
+          class="page-link double-previous"
+          aria-label="Previous"
+          (click)="goToPreviousPage()"
+          [class.disabled]="currentPageNumber === 1"
+        >
+          <span aria-hidden="true">&laquo;</span>
+        </a>
+      </li>
+      <!-- PAGE SIZE -->
+      <li class="page-item" *ngFor="let page of totalPages">
+        <a
+          class="page-link"
+          (click)="currentPageNumber = page; getUsers()"
+          [class.active]="currentPageNumber === page"
+          >{{ page }}</a
+        >
+      </li>
+      <!--NEXT -->
+      <li class="page-item">
+        <a
+          class="page-link"
+          aria-label="Next"
+          (click)="goToNextPage()"
+          [class.disabled]="currentPageNumber === totalPages.length"
+        >
+          <span aria-hidden="true">&raquo;</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
