--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
         <form>
-          <div
+          <!-- <div
             class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start"
           >
             <p class="lead fw-normal mb-0 me-3">Sign in with</p>
@@ -28,7 +28,14 @@
           </div>
           <div class="divider d-flex align-items-center my-4">
             <p class="text-center fw-bold mx-3 mb-0">Or</p>
+          </div> -->
+          <div class="divider d-flex align-items-center my-4">
+            <p class="text-center fw-bold mx-3 mb-0" style="font-size: 35px; color: #555252;">
+              Login
+            </p>
           </div>
+
+          <br>
           <p style="color: red">{{ message_error }}</p>
           <!-- Email input -->
           <div class="form-outline mb-4">
@@ -53,7 +60,7 @@
               (keyup.enter)="submit()"
             />
           </div>
-
+          <br>
           <div class="d-flex justify-content-between align-items-center">
             <!-- Checkbox -->
             <div class="form-check mb-0">
@@ -75,16 +82,16 @@
           <div class="text-center text-lg-start mt-4 pt-2">
             <button
               type="button"
-              class="btn btn-primary btn-lg"
+              class="btn btn-primary"
               style="padding-left: 2.5rem; padding-right: 2.5rem"
               (click)="submit()"
             >
               Login
             </button>
-            <p class="small fw-bold mt-2 pt-1 mb-0">
+            <!-- <p class="small fw-bold mt-2 pt-1 mb-0">
               Don't have an account?
               <a href="#!" class="link-danger">Register</a>
-            </p>
+            </p> -->
           </div>
         </form>
       </div>
